Cpanel sub-domains are now re-created when migrating their backups.
The default PHP version for one or more virtual servers can be changed with --php-version option to modify-web.pl.
When migrating backups from Postfix-style ~/Maildir inboxes to Sendmail-style /var/mail, mail files are properly copied across.
Changed the content style chooser to display thumbnail images in the drop-down menu.
Added a script installer for Django, a development framework for Python applications.
By default, new virtual servers will no longer have the PHP_FCGI_CHILDREN environment variable set in the fCGI wrapper files. This avoids a PHP bug that causes stale php-cgi processes to be left running, but may slightly reduce the performance of PHP applications.
Multiple warning thresholds and an interval between sending a notification for each domain can now be configured on the Disk Quota Monitoring page.
For virtual servers using fcgid to run PHP scripts, the IPCCommTimeout is set to the PHP maximum execution time, to avoid long-running scripts not being able to send their output.
---- Changes since 3.56 ----
Updated the eTicket script installer to version 1.5.7, WordPress to 2.5.1, bbPress to 0.9.0.2, Kronolith to 2.1.8, phpMyAdmin to 2.11.6, Joomla 1.5.3, SMF to 1.1.5, Magento to 1.0.19700, phpCOIN to 1.4.2, DokuWiki to 2008-05-05, Bugzilla to 3.1.4, and SugarCRM to 5.0.0d.
Added an alias for /media/ in the Django installer, so that CSS and images used by the admin servlet appear.
Added a script installer for phpLedMailer 1.8, a simple single-mailing-list manager.
Updated the Drupal script installer to support version 6.2.
Added a script installer for Piwik, an open-source web analytics tool.
Post-change scripts have access to the settings of a virtual server before it was changed in the VIRTUALSERVER_OLDSERVER_* environment variables.
If MySQL or PostgreSQL have no root password set, display a warning during the configuration check.