@@ -41,9 +41,6 @@
  - use new Apache module function for block updates instead of directly
    modifying config file, when Webmin 1.380 is out
 
- - security updates and apt pinning
-	- http://www.virtualmin.com/forums/virtualmin/re%3adebian-backports-and-virtualmin.html#8423
-
  - only load plugins on demand, to save on memory
 	 - check and cache which functions are supported, to avoid need for
 	   plugin_defined call
