@@ -908,3 +908,4 @@ Updated the Drupal script installer to support version 6.2.
 Added a script installer for Piwik, an open-source web analytics tool.
 Post-change scripts have access to the settings of a virtual server before it was changed in the VIRTUALSERVER_OLDSERVER_* environment variables.
 If MySQL or PostgreSQL have no root password set, display a warning during the configuration check.
+AddHandler, FCGIWrapper and RemoveHandler directives not related to PHP versions Virtualmin knows about are not touched when changing PHP settings.
